<resources>
    <!-- common -->
    <string name="app_name">하냥라온</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="close">닫기</string>

    <!-- main -->
    <string name="ff14_daily_lottery">파판 일일복권 경우의 수 계산기</string>

    <!-- ff14 -->
    <string name="clear">초기화</string>
    <string name="warn_selected_number">이미 선택된 숫자입니다</string>
    <string name="min_reward">최소보상 : </string>
    <string name="max_reward">최대보상 : </string>
    <string name="remove_number">제거</string>


    <string name="settings">설정</string>

    <!-- splash -->
    <string name="splash_message">스플래시입니당 <![CDATA["'ㅅ'"]]></string>
    <string name="copyright">Copyright © HanyangRaon</string>

    <!-- login -->
    <string name="login">로그인</string>

    <!-- talk -->
    <string name="create_talk">새로운 대화 생성</string>


    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
