<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ff14_daily_lottery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hanyangraon.kei.app_hnro.view.ff14.FF14_daily_lottery_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_sel_diagonal1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_trending_down_black_24dp"
                android:drawableStart="@drawable/ic_trending_down_black_24dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_sel_under1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_downward_black_24dp"
                android:drawableStart="@drawable/ic_arrow_downward_black_24dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_sel_under2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_downward_black_24dp"
                android:drawableStart="@drawable/ic_arrow_downward_black_24dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_sel_under3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_downward_black_24dp"
                android:drawableStart="@drawable/ic_arrow_downward_black_24dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_sel_right1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
                android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:tag="1"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:tag="2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:tag="3"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_sel_right2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
                android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:tag="4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:tag="5"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:tag="6"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_sel_right3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
                android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:tag="7"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:tag="8"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:tag="9"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_sel_diagonal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_call_made_black_24dp"
                android:drawableStart="@drawable/ic_call_made_black_24dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_reward" />

                    <TextView
                        android:id="@+id/view_min_reward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_reward" />

                    <TextView
                        android:id="@+id/view_max_reward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/clear"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/ff14_daily_lottery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pop_sel_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack70"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <NumberPicker
                android:id="@+id/sel_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_pop_sel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_pop_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
